--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,23 +29,22 @@ jobs:
         run: npm run build
 
       - name: Save artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
-          name: build-folder
+          name: build-artifact
           path: build
+          retention-days: 1
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Get artifact
-        uses: actions/download-artifact@v1
-        with:
-          name: build-folder
+      - name: Get artifact(s)
+        uses: actions/download-artifact@v2
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./build
+          publish_dir: ./build-artifact
