--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,37 +7,53 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
           fetch-depth: 0
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "16.x"
+          cache: "npm"
 
       - name: Install Packages
         run: npm ci
 
-      - name: Build page
+      - name: Build application
         run: npm run build
 
-      - name: Save artifact
+      - name: Save build artifact
         uses: actions/upload-artifact@v2
         with:
           name: build-artifact
           path: build
           retention-days: 1
 
-  deploy:
+  test:
     runs-on: ubuntu-latest
     needs: build
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+          fetch-depth: 0
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16.x"
+          cache: "npm"
+      - name: Test
+        run: npm run test
+        env:
+          CI: true
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - name: Get artifact(s)
