--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,11 +41,16 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
+
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
           node-version: "16.x"
           cache: "npm"
+
+      - name: Install Packages
+        run: npm ci
+
       - name: Test
         run: npm run test
         env:
