--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "http://json.schemastore.org/cloudbuild": [
             "cloudbuild.yaml"
         ]
-    }
+    },
+    "redhat.telemetry.enabled": false
 }
