--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Build application
         run: npm run build
+        env:
+          PUBLIC_URL: https://philliprc.github.io/react-cra-mui
 
       - name: Save build artifact
         uses: actions/upload-artifact@v2
