--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,12 @@
             "cloudbuild.yaml"
         ]
     },
-    "redhat.telemetry.enabled": false
+    "redhat.telemetry.enabled": false,
+    "css.customData": [
+        ".vscode/css_custom_data.json"
+    ],
+    "css.validate": false,
+    "editor.quickSuggestions": {
+        "strings": true
+    }
 }
