Updated name and icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WOOT",
+  "name": "WOOT",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,15 +10,11 @@
     {
       "src": "logo192.png",
       "type": "image/png",
+      "purpose": "maskable",
       "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
-  "start_url": "https://philliprc.github.io/react-cra-mui/index.html",
+  "start_url": "https://philliprc.github.io/react-cra-mui",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
