--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,12 @@
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "purpose": "maskable",
+      "sizes": "512x512"
     }
   ],
   "start_url": "https://philliprc.github.io/react-cra-mui/",
