--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,30 @@
       "type": "image/x-icon"
     },
     {
+      "src": "logo48.png",
+      "type": "image/png",
+      "purpose": "maskable",
+      "sizes": "48x48"
+    },
+    {
+      "src": "logo72.png",
+      "type": "image/png",
+      "purpose": "maskable",
+      "sizes": "72x72"
+    },
+    {
+      "src": "logo96.png",
+      "type": "image/png",
+      "purpose": "maskable",
+      "sizes": "96x96"
+    },
+    {
+      "src": "logo128.png",
+      "type": "image/png",
+      "purpose": "maskable",
+      "sizes": "128x128"
+    },
+    {
       "src": "logo192.png",
       "type": "image/png",
       "purpose": "maskable",
