--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,12 @@
       "sizes": "192x192"
     },
     {
+      "src": "logo384.png",
+      "type": "image/png",
+      "purpose": "maskable",
+      "sizes": "384x384"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "purpose": "any",
@@ -47,5 +53,5 @@
   "start_url": "https://philliprc.github.io/react-cra-mui/",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#333333"
 }
