--- a/manifest.json
+++ b/manifest.json
@@ -8,43 +8,43 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo48.png",
+      "src": "icon48.png",
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "48x48"
     },
     {
-      "src": "logo72.png",
+      "src": "icon72.png",
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "72x72"
     },
     {
-      "src": "logo96.png",
+      "src": "icon96.png",
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "96x96"
     },
     {
-      "src": "logo128.png",
+      "src": "icon128.png",
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "128x128"
     },
     {
-      "src": "logo192.png",
+      "src": "icon192.png",
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "192x192"
     },
     {
-      "src": "logo384.png",
+      "src": "icon384.png",
       "type": "image/png",
       "purpose": "maskable",
       "sizes": "384x384"
     },
     {
-      "src": "logo512.png",
+      "src": "icon512.png",
       "type": "image/png",
       "purpose": "any",
       "sizes": "512x512"
