--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,8 @@ jobs:
           PUBLIC_URL: https://philliprc.github.io/react-cra-mui
 
       - name: Save build artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: build-artifact
           path: build
           retention-days: 1
 
@@ -73,7 +72,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
 
     environment:
       name: github-pages
@@ -83,5 +82,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact: build-artifact
