--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,33 +46,33 @@ jobs:
           path: build
           retention-days: 1
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          fetch-depth: 0
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: true
+  #         fetch-depth: 0
 
-      - name: Use Node.js 22
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: "npm"
+  #     - name: Use Node.js 22
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 22
+  #         cache: "npm"
 
-      - name: Install Packages
-        run: npm ci
+  #     - name: Install Packages
+  #       run: npm ci
 
-      - name: Test
-        run: npm run test
-        env:
-          CI: true
+  #     - name: Test
+  #       run: npm run test
+  #       env:
+  #         CI: true
 
   deploy:
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
 
     environment:
       name: github-pages
